--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "illusion"
-  avatar           : "https://img-assets.illusion0001.workers.dev/assets/avatar_cloud_strife.svg"
+  avatar           : "https://drive.google.com/uc?id=1g5WPGeS4zahuw1F277HB9k5vE4ojljVS"
   bio              : "I make video game patches as a hobby."
   location         : "United States"
   email            : illusion3185@gmail.com
